fixed word wrap problem

--- a/public/sass/new-tweet.sass
+++ b/public/sass/new-tweet.sass
@@ -103,7 +103,7 @@
     align-items: center
     margin: 0 10px
     p
-      word-wrap: break-word
+      word-break: break-word
       
   footer 
     border-top: 1px solid black
